force-app/main/default/objects/Project__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <formula>IF(Total_Milestones__c &gt; 0, Total_Milestones_Percent_Complete__c / Total_Milestones__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>