force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISBLANK(Percentage_Complete__c) || Percentage_Complete__c &lt; 1 , &apos;Not Started&apos;, 
IF(Percentage_Complete__c &lt; 100, &apos;In Progress&apos;, &apos;Complete&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>