force-app/main/default/objects/Project__c/fields/Total_Milestones_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestones_Percent_Complete__c</fullName>
    <label>Total Milestones Percent Complete</label>
    <summarizedField>Milestone__c.Percentage_Complete__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>